--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "@vitejs/plugin-rsc": "^0.5.5",
+    "next": "^15.5.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "react-server-dom-parcel": "^19.2.1",
+    "react-server-dom-webpack": "^19.2.1",
     "sass": "^1.93.2",
     "swiper": "^12.0.2"
   },
